--- a/src/app/_components/terminal/terminal-input/terminal-input.module.scss
+++ b/src/app/_components/terminal/terminal-input/terminal-input.module.scss
@@ -3,7 +3,6 @@
 .inputLine {
   display: flex;
   align-items: center;
-  margin-top: 4px;
   cursor: text;
 }
 
